# git2hours

./: Cargo.toml
src/: counter.rs  main.rs
src/git/: commit_iterator.rs  commit_query.rs  mod.rs
