[package]
name = "git2hours"
version = "0.1.0"
authors = ["Joost Lubach <joostlubach@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
derive_builder = "0.11.1"
utf8-width = "0.1.6"
scanner-rust = "2.0.16"
regex = "1.5.5"
lazy_static = "1.3.0"
itertools = "0.10.3"